--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
+    "react-file-reader": "^1.1.4",
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
