--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-file-reader": "^1.1.4",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
