--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "geomagnetism": "^0.1.1",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet-draw": "^1.0.4",
     "leaflet-geosearch": "^3.8.0",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-file-reader": "^1.1.4",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-draw": "^0.20.4",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
